# hydromath

./: .gitignore  .travis.yml  CMakeLists.txt  hydromath.h  stats.c  test.c
ci/: get_labels.py  get_latest_conda_build_path.py  move_conda_package.py
ci/travis/: install.sh
conda.recipe/: .binstar.yml  build.sh  meta.yaml
includes/: hydromath.h  stats.h
src/: CMakeLists.txt  hydromath.c  stats.c  test.c
tests/: CMakeLists.txt  test.c  test_hydromath.c  test_stats.c
